--- a/mylee_next_forge/apps/app/package.json
+++ b/mylee_next_forge/apps/app/package.json
@@ -25,6 +25,7 @@
     "@repo/seo": "*",
     "@repo/webhooks": "*",
     "@sentry/nextjs": "^9.22.0",
+    "@supabase/supabase-js": "^2.50.0",
     "@t3-oss/env-nextjs": "^0.13.4",
     "fuse.js": "^7.1.0",
     "import-in-the-middle": "^1.13.2",
